# csv-validator

./: .dockerignore  .gitignore  Dockerfile  README.md  pylintrc  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-setuptools.txt  requirements.txt
models/: cluster_registry.py  example_model.py  platform.py
models/invalid/: invalid_model_not_a_class.py
sources_of_truth/: dupes_invalid.csv  dupes_long_invalid.csv  header_invalid.csv
sources_of_truth/cluster_registry/: cluster_reg_sot_invalid.csv  cluster_reg_sot_invalid_unknown_cols.csv  cluster_reg_sot_invalid_whitespace.csv  cluster_reg_sot_valid.csv  cluster_reg_sot_valid_missing_optionals.csv
sources_of_truth/example/: invalid.csv  valid.csv
sources_of_truth/platform/: platform_invalid.csv  platform_invalid_extra_cols.csv  platform_valid.csv  platform_valid_optional.csv  platform_valid_whitespace.csv
src/csv_validator/: __main__.py  helpers.py  model.py
tests/: test_cli.py
