[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "csv_validator"
version = "v0.1"
authors = [
    { name = "Paul Durivage", email = "durivage@google.com" },
]
readme = "README.md"
license = { text = "Apache License Version 2.0" }
requires-python = ">=3.12"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }
optional-dependencies.dev = { file = ["requirements-dev.in"] }

[project.scripts]
validate_csv = "csv_validator.__main__:main"

[tool.pip-tools]
generate-hashes = true
